--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"description": "Signals based console application wrapper",
 	"require": {
 		"maslosoft/signals": "*",
-		"symfony/console": ">=2.7 <5.0"
+		"symfony/console": ">=2.7 <=6.0"
 	},
 	"license": [
 		"AGPL",
@@ -23,7 +23,5 @@
 			"Maslosoft\\Sitcom\\": "src"
 		}
 	},
-	"require-dev": {
-		"maslosoft/hedron": "*"
-	}
+	"homepage": "https://maslosoft.com/sitcom/"
 }
