--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"description": "Signals based console application wrapper",
 	"require": {
 		"php": ">=8.2",
-		"symfony/console": ">=2.7 <7.0",
+		"symfony/console": ">=2.7",
 		"maslosoft/signals": "*"
 	}
 	,
